--- a/proiect-daw/Views/Posts/New.cshtml
+++ b/proiect-daw/Views/Posts/New.cshtml
@@ -26,9 +26,7 @@
                         <!-- Post Content -->
                         <div class="mb-3">
                             <label asp-for="Content" class="form-label font-montserrat">Content</label>
-                            <div id="editor">
-                             
-                            </div>
+                            <div id="editor"></div>
                             <textarea id="Content" name="Content" style="display:none;"></textarea>
                             <span asp-validation-for="Content" class="text-danger"></span>
                         </div>
