--- a/proiect-daw/Views/Groups/Index.cshtml
+++ b/proiect-daw/Views/Groups/Index.cshtml
@@ -35,11 +35,12 @@
         <br />
         @foreach (var group in ViewBag.OwnGroups)
         {
-            <div class="card">
+            <div >
 
-                <partial name="GroupInfo" model="group" />
 
-                <a class="btn btn-primary btn-sm" asp-controller="Groups" asp-action="Show" asp-route-id="@group.Id">Afisare</a>
+                <a style="text-decoration:none; color:black" asp-controller="Groups" asp-action="Show" asp-route-id="@group.Id">
+                    <partial name="GroupInfo" model="group" />
+                </a>
 
             </div>
 
