--- a/proiect-daw/Views/Groups/New.cshtml
+++ b/proiect-daw/Views/Groups/New.cshtml
@@ -15,15 +15,15 @@
 
                         <!-- Group Title -->
                         <div class="mb-3">
-                            <label asp-for="Name" class="form-label font-montserrat">Nume</label>
-                            <input asp-for="Name" class="form-control" placeholder="Adaugă un nume..." />
+                            <label asp-for="Name" class="form-label font-montserrat">Name</label>
+                            <input asp-for="Name" class="form-control" placeholder="Add name..." />
                             <span asp-validation-for="Name" class="text-danger"></span>
                         </div>
 
                         <!-- Group Description -->
                         <div class="mb-3">
-                            <label asp-for="Description" class="form-label font-montserrat">Descriere</label>
-                            <textarea asp-for="Description" class="form-control summernote" placeholder="Descrierea grupului..."></textarea>
+                            <label asp-for="Description" class="form-label font-montserrat">Description</label>
+                            <textarea asp-for="Description" class="form-control summernote" placeholder="Description..."></textarea>
                             <span asp-validation-for="Description" class="text-danger"></span>
                         </div>
 
