--- a/proiect-daw/Views/Groups/Show.cshtml
+++ b/proiect-daw/Views/Groups/Show.cshtml
@@ -13,9 +13,11 @@
         <div class="mt-3">
             <img src="@Url.Content(Model.GroupPhoto)" alt="Group Logo" class="img-thumbnail" style="max-width: 200px;" />
         </div>
-        
+
         <h2 class="display-4 text-primary fw-bold">@Model.Name</h2>
         <p class="lead text-muted">@Model.Description</p>
+        <p class="text-muted"><strong>Moderator:</strong>@Model.ModeratorName</p>
+
 
         @if (ViewBag.isPendingApproval == false)
         {
