--- a/proiect-daw/Views/Posts/Index.cshtml
+++ b/proiect-daw/Views/Posts/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@using Microsoft.AspNetCore.Mvc.Localization
+﻿@using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
 
 <br />
@@ -19,41 +18,35 @@
     <div class="input-group mb-3">
         <input type="text" class="form-control" placeholder="@Localizer["Placeholder_Search"]" name="search"
                value="@ViewBag.SearchString">
-        <button  type="submit">
-
+        <button type="submit">
             <span class="transition"></span>
             <span class="gradient"></span>
-            <span class="label"> @Localizer["Button_Search"]
-            </span>
-        
+            <span class="label">@Localizer["Button_Search"]</span>
         </button>
-
-
-
-
-
     </div>
 </form>
 
 @* Posts List *@
 @if (ViewBag.Posts != null && ViewBag.Posts.Count > 0)
 {
-    @foreach (var post in ViewBag.Posts)
-    {
-        <div class="mb-4" style="max-width: 900px; max-height: 400px; margin: 0 auto; overflow: hidden;
-margin-bottom: 2px black;
-">
-            <a style="text-decoration:none; color:black; display: block;"
-               asp-controller="Posts" asp-action="Show" asp-route-id="@post.Id">
-                @{
-                    ViewData["CurrentUserId"] = ViewBag.UserCurent;
-                    ViewData["Likes"] = ViewData[$"Likes_{post.Id}"];
-                }
-                <partial  name="PostInfo" model="post" viewdata="ViewData"></partial>
-            </a>
-        </div>
-
-    }
+    <div class="d-flex flex-column align-items-center">
+        @foreach (var post in ViewBag.Posts)
+        {
+            <div class="mb-4">
+                <a style="text-decoration:none; color:black; display: block;"
+                   asp-controller="Posts" asp-action="Show" asp-route-id="@post.Id">
+                    @{
+                        ViewData["CurrentUserId"] = ViewBag.UserCurent;
+                        ViewData["Likes"] = ViewData[$"Likes_{post.Id}"];
+                    }
+                    <partial name="PostInfo" model="post" viewdata="ViewData"></partial>
+                </a>
+            </div>
+        }
+        @* Spacer at the end of the page *@
+    
+    </div>
+    <br />
 }
 else
 {
@@ -63,7 +56,7 @@ else
 }
 
 @* Pagination *@
-<div>
+<div class="mb-5">
     <nav aria-label="@Localizer["Navigation_Pages"]">
         <ul class="pagination justify-content-center">
             <li class="page-item">
@@ -85,3 +78,4 @@ else
         </ul>
     </nav>
 </div>
+
