--- a/proiect-daw/Views/Posts/New.cshtml
+++ b/proiect-daw/Views/Posts/New.cshtml
@@ -91,7 +91,7 @@
                         <!-- Submit Button -->
                         <div class="d-flex justify-content-end">
                             <button class="btn btn-primary px-4 py-2 font-montserrat" type="submit">
-                                <i class="bi bi-pencil-square"></i> Postează
+                                <i class="bi bi-pencil-square"></i> Post
                             </button>
                         </div>
                     </form>
