--- a/proiect-daw/Views/Users/Index.cshtml
+++ b/proiect-daw/Views/Users/Index.cshtml
@@ -130,6 +130,9 @@
                                 @if (User.IsInRole("Admin"))
                                 {
                                     <a asp-controller="Users" asp-action="Edit" asp-route-id="@user.Id" class="btn btn-sm btn-success">Edit User</a>
+                                    <form asp-controller="Users" asp-action="Delete" asp-route-id="@user.Id" method="post" style="display:inline;">
+                                        <button type="submit" class="btn btn-sm btn-danger">Delete User</button>
+                                    </form>
                                 }
                             </div>
                         </a>
