--- a/proiect-daw/Views/Groups/PendingApproval.cshtml
+++ b/proiect-daw/Views/Groups/PendingApproval.cshtml
@@ -17,7 +17,7 @@
             <div class="col">
                 <div class="card shadow-sm h-100">
                     <div class="card-body text-center">
-                        <img src="@membership.User?.ProfilePhoto" alt="Profile Picture" class="rounded-circle me-3" width="50" height="50">
+                        <img src="@(string.IsNullOrEmpty(membership.User?.ProfilePhoto) ? "images/profiles/default.jpg" : membership.User.ProfilePhoto)" alt="Profile Picture" class="rounded-circle me-3" width="50" height="50">
                         <h5 class="card-title fw-bold text-dark">@membership.User.FirstName @membership.User.LastName</h5>
                         <p class="card-text text-muted mb-1">@membership.User.Email</p>
                         <p class="card-text"><span class="badge bg-info">Group: @membership.Group.Name</span></p>
