--- a/proiect-daw/Views/Users/Index.cshtml
+++ b/proiect-daw/Views/Users/Index.cshtml
@@ -87,14 +87,8 @@
                         <img src="@searched_user.ProfilePhoto" alt="Profile Image" class="profile-img">
                         <div class="card-body">
                             <p><strong>@searched_user.FirstName @searched_user.LastName</strong></p>
-                            @if (searched_user.PrivateProfile)
-                            {
-                                <p>@searched_user.ProfileDescription</p>
-                            }
-                            else
-                            {
-                                <p>Email: @searched_user.Email</p>
-                            }
+                            <p class="truncate" style="max-width: 50ch;">@searched_user.ProfileDescription</p>
+
 
                             @if (User.IsInRole("Admin"))
                             {
@@ -115,17 +109,14 @@
                 <div class="col-12 col-md-6 col-lg-4 mb-4">
                     <div class="card">
                         <a asp-controller="Users" asp-action="Show" asp-route-id="@user.Id" style="text-decoration:none; color:inherit;">
-                            <img src="@user.ProfilePhoto" alt="Profile Image" class="profile-img">
+                           
+                            <img src="@(string.IsNullOrEmpty(user.ProfilePhoto) ? "images/profiles/default.jpg" : user.ProfilePhoto)" alt="Profile Image" class="profile-img">
+
+
                             <div class="card-body">
                                 <p><strong>@user.FirstName @user.LastName</strong></p>
-                                @if (!user.PrivateProfile)
-                                {
-                                    <p>Email: @user.Email</p>
-                                }
-                                else
-                                {
-                                    <p class="truncate">@user.ProfileDescription</p>
-                                }
+                                <p class="truncate" style="max-width: 50ch;">@user.ProfileDescription</p>
+
 
                                 @if (User.IsInRole("Admin"))
                                 {
