--- a/proiect-daw/Views/Shared/GroupInfo.cshtml
+++ b/proiect-daw/Views/Shared/GroupInfo.cshtml
@@ -18,7 +18,7 @@
                             <p>Moderator: @Model.ModeratorName</p>
                         </div>
 
-                        <div class="card-footer bg-white d-flex justify-content-between align-items-center">
+                        <div class="card-footer d-flex justify-content-between align-items-center">
                             <small class="text-muted">Created on @Model.Date.ToString("MMMM dd, yyyy")</small>
                         </div>
                     </div>
