--- a/proiect-daw/Views/Groups/Show.cshtml
+++ b/proiect-daw/Views/Groups/Show.cshtml
@@ -24,6 +24,15 @@
                 <p class="text-muted"><strong>Moderator: </strong> @Model.ModeratorName</p>
                 <p class="text-muted"><strong>Visibility: </strong> @visibility</p>
                 
+                @if(User.IsInRole("Admin"))
+                {
+                    <form asp-controller="Groups" asp-action="DeleteGroup" method="post" class="d-inline">
+                        <input type="hidden" name="id" value="@Model.Id" />
+                        <button type="submit" class="btn btn-outline-danger btn-lg mt-3">
+                            <i class="bi bi-trash"></i> Delete Group
+                        </button>
+                    </form>
+                }
 
                 @if (ViewBag.isPendingApproval == false)
                 {
