--- a/proiect-daw/Views/Groups/Show.cshtml
+++ b/proiect-daw/Views/Groups/Show.cshtml
@@ -4,7 +4,7 @@
 
 @{
     var currentUserId = UserManager.GetUserId(User);
-    var isModerator = Model.ModeratorId == currentUserId;
+    var isModerator = Model.ModeratorId == currentUserId || User.IsInRole("Admin");
     
 	string visibility = Model.PrivateGroup ? "Private" : "Public";
 }
@@ -24,7 +24,7 @@
                 <p class="text-muted"><strong>Moderator: </strong> @Model.ModeratorName</p>
                 <p class="text-muted"><strong>Visibility: </strong> @visibility</p>
                 
-                @if(User.IsInRole("Admin"))
+                @if(isModerator)
                 {
                     <form asp-controller="Groups" asp-action="DeleteGroup" method="post" class="d-inline">
                         <input type="hidden" name="id" value="@Model.Id" />
@@ -124,7 +124,7 @@
                                     <h5 class="card-title fs-5 text-primary">@user.FirstName @user.LastName</h5>
                                     <p class="card-text text-muted">@user.Email</p>
 
-                                    @if (isModerator && user.Id != Model.ModeratorId)
+                                    @if ((isModerator && user.Id != Model.ModeratorId) || User.IsInRole("Admin"))
                                     {
                                         <form asp-controller="Groups" asp-action="RemoveUser" method="post" class="d-inline">
                                             <input type="hidden" name="groupId" value="@Model.Id" />
@@ -144,7 +144,7 @@
 
         <!-- Right Column: Comments Section -->
         <div class="col-md-6">
-            @if (ViewBag.isPendingApproval == false)
+            @if (ViewBag.isPendingApproval == false || isModerator)
             {
                 <h4 class="text-success mb-4">Comments</h4>
                 <div class="row">
@@ -157,7 +157,7 @@
                                     <div class="w-100">
                                         <div class="d-flex justify-content-between">
                                             <h5 class="card-title mb-0">@message.User.FirstName @message.User.LastName</h5>
-                                            @if (isModerator || message.User.Id == currentUserId)
+                                            @if (isModerator ||  message.User.Id == currentUserId)
                                             {
                                                 <div>
                                                     <form asp-controller="Groups" asp-action="RemoveComment" method="post" class="d-inline">
